kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mollysocket
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mollysocket
  template:
    metadata:
      labels:
        app: mollysocket
    spec:
      containers:
      - name: mollysocket
        image: ghcr.io/mollyim/mollysocket:1
        args: ["server"]
        workingDir: /data
        ports:
        - containerPort: 8020
        volumeMounts:
        - name: data
          mountPath: /data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: mollysocket-pvc
